--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -61,8 +61,8 @@
 @media screen and (max-width: 890px) {
   .contact {
     padding: 40px;
-    height: 100%;
-    // max-height: 400px;
+    // height: 100%;
+    height: 300px;
   }
 
   .content__box {
@@ -75,4 +75,11 @@
   .contact__info {
     visibility: hidden;
   }
+  .form_input {
+    padding-bottom: 8px;
+  }
+  .more_btn {
+    margin: 0 auto 20px;
+  }
 }
+ 
